# riceware

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix
.github/workflows/: ci.yaml
src/: main.rs  passphrase.rs  words.rs
src/fixtures/: words
