[package]
name = "riceware"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
eyre = "0.6.12"
itertools = "0.14.0"
rand = "0.8.5"
regex = "1.11.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
rand_chacha = "0.3.1"
rayon = "1.10.0"
statrs = "0.18.0"

[lint.clippy]
all = "deny"
pedantic = "deny"
