[package]
name = "riceware"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
eyre = "0.6.12"
itertools = "0.14.0"
rand = "0.9.2"
regex = "1.11.2"

[dev-dependencies]
pretty_assertions = "1.4.1"
rand_chacha = "0.9.0"
rayon = "1.11.0"
statrs = "0.18.0"

[lints.clippy]
all = "deny"
pedantic = "deny"
